# IanniX

./: .gitignore  CMakeLists.txt  IanniX.pro  README.md  build.sh
.github/workflows/: build.yml
Examples/: Curve 3D equations MIDI.iannix  Dastan.iannix  Fractals.iannix  IanniX logo.iannix  Performance - (a-z).iannix  Performance - Pulsar MF 2014.iannix  Performance - Recurrence.iannix  Random 3D lines.iannix  Rosette.iannix  Smooth 3D curves.iannix  Spirographe.iannix  Test MIDI Fix.iannix  Torus.iannix
geometry/: nxeasing.cpp
gui/: uiinspector.cpp  uiinspector.h  uiinspector.ui  uiview.cpp  uiview.ui
interfaces/: interfacemidi.cpp  interfaceosc.cpp
interfaces/qrtmidi/: RtMidi.cpp
render/: uirender.cpp
